init class operation et operationDAO

--- a/ressources/db.properties
+++ b/ressources/db.properties
@@ -1,5 +1,5 @@
 # this is a comment
 jbdc.class.driver=com.mysql.jdbc.Driver
-jdbc.db.url=jdbc:mysql://localhost:3306/epsi-b3-19-20?useLegacyDatetimeCode=fasle&serverTimezone=UTC
+jdbc.db.url=jdbc:mysql://localhost:3306/sega_bank?useLegacyDatetimeCode=fasle&serverTimezone=UTC
 jdbc.db.login=root
 jdbc.db.password=
