Finalisation de la classe OperationDAO (Changements aussi dans l'interface et les différentes classes DAO)

--- a/ressources/db.properties
+++ b/ressources/db.properties
@@ -2,4 +2,4 @@
 jbdc.class.driver=com.mysql.cj.jdbc.Driver
 jdbc.db.url=jdbc:mysql://localhost:3306/sega_bank?useLegacyDatetimeCode=fasle&serverTimezone=UTC
 jdbc.db.login=root
-jdbc.db.password=
+jdbc.db.password=root
