--- a/ressources/db.properties
+++ b/ressources/db.properties
@@ -1,5 +1,5 @@
 # this is a comment
 jbdc.class.driver=com.mysql.cj.jdbc.Driver
-jdbc.db.url=jdbc:mysql://localhost:3306/sega_bank?useLegacyDatetimeCode=fasle&serverTimezone=UTC
-jdbc.db.login=root
-jdbc.db.password=root
+jdbc.db.url=jdbc:mysql://localhost:3306/BD_NAME?useLegacyDatetimeCode=fasle&serverTimezone=UTC
+jdbc.db.login=LOGIN
+jdbc.db.password=PWD
